; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/ciphers/extr_cipher_rc4_hmac_md5.c_rc4_hmac_md5_newctx.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/ciphers/extr_cipher_rc4_hmac_md5.c_rc4_hmac_md5_newctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RC4_HMAC_MD5_KEY_BITS = common dso_local global i32 0, align 4
@RC4_HMAC_MD5_BLOCK_BITS = common dso_local global i32 0, align 4
@RC4_HMAC_MD5_IV_BITS = common dso_local global i32 0, align 4
@RC4_HMAC_MD5_MODE = common dso_local global i32 0, align 4
@RC4_HMAC_MD5_FLAGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @rc4_hmac_md5_newctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @rc4_hmac_md5_newctx(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i8* @OPENSSL_zalloc(i32 1)
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @RC4_HMAC_MD5_KEY_BITS, align 4
  %10 = load i32, i32* @RC4_HMAC_MD5_BLOCK_BITS, align 4
  %11 = load i32, i32* @RC4_HMAC_MD5_IV_BITS, align 4
  %12 = load i32, i32* @RC4_HMAC_MD5_MODE, align 4
  %13 = load i32, i32* @RC4_HMAC_MD5_FLAGS, align 4
  %14 = load i32, i32* @RC4_HMAC_MD5_KEY_BITS, align 4
  %15 = call i32 @PROV_CIPHER_HW_rc4_hmac_md5(i32 %14)
  %16 = call i32 @cipher_generic_initkey(i8* %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 %13, i32 %15, i32* null)
  br label %17

17:                                               ; preds = %7, %1
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i8* @OPENSSL_zalloc(i32) #1

declare dso_local i32 @cipher_generic_initkey(i8*, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @PROV_CIPHER_HW_rc4_hmac_md5(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
